[gd_scene load_steps=6 format=2]

[ext_resource path="res://Utilities/m3x6.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/DeathScreen/LossScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="LossScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 270.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 480.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 108.0
margin_top = 5.0
margin_right = 372.0
margin_bottom = 265.0
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 264.0
margin_bottom = 102.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 264.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.607843, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "You died!"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 264.0
margin_bottom = 192.0
custom_constants/separation = -12

[node name="CenterContainer5" type="CenterContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 264.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/CenterContainer5"]
margin_left = 30.0
margin_right = 234.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Difficulty: Medium"
align = 1

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 264.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/CenterContainer3"]
margin_left = 28.0
margin_right = 235.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Enemies Slain: 000"
align = 1

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 264.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/CenterContainer4"]
margin_left = 73.0
margin_right = 190.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Round: 000"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_left = 44.0
margin_top = 192.0
margin_right = 220.0
margin_bottom = 260.0
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 176.0
margin_bottom = 68.0
custom_constants/separation = -8

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 176.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 176.0
margin_bottom = 38.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 38.0
rect_min_size = Vector2( 16, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 176.0
margin_bottom = 38.0
rect_min_size = Vector2( 156, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Retry"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 30.0
margin_right = 176.0
margin_bottom = 68.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 176.0
margin_bottom = 38.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 16.0
margin_bottom = 38.0
rect_min_size = Vector2( 16, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 20.0
margin_right = 176.0
margin_bottom = 38.0
rect_min_size = Vector2( 156, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Back to Menu"
